add animation files

--- a/code/douban/1.html
+++ b/code/douban/1.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <link rel="stylesheet" href="1.css" media="all" />
         <meta name="viewport" content="width=device-width" />
         <title>豆瓣</title>
     </head>
@@ -11,21 +12,23 @@
         <input type="submit" name="" id="" value="" />
         <nav>
             <ul>
-                <li><a href="#">读书</a></li>
-                <li><a href="#">电影</a></li>
-                <li><a href="#">音乐</a></li>
-                <li><a href="#">小组</a></li>
+                <li>
+                    <a href="/" style="color:blue;" id="read" class="font-green">读书</a>
+                </li>
+                <li><a href="#" class="font-big ">电影</a></li>
+                <li class="nb"><a href="#">音乐</a></li>
+                <li><a href="#" class="font-big">小组</a></li>
                 <li><a href="#">同城</a></li>
-                <li><a href="#">FM</a></li>
+                <li><a href="#" class="font-big">FM</a></li>
                 <li><a href="#">东西</a></li>
-                <li><a href="#">市集</a></li>
+                <li><a href="#" class="font-big">市集</a></li>
             </ul>
         </nav>
         <img src="lbg.png" alt="app" />
         <div>
             <h2>豆瓣4.0</h2>
             <span>我们的精神角落</span>
-            <a href="#">下载豆瓣app</a>
+            <a href="#" class="font-big">下载豆瓣app</a>
         </div>
         <div>
             <form action="/" method="post">
