--- a/code/transition/transition.html
+++ b/code/transition/transition.html
@@ -7,16 +7,14 @@
     div{
         width:100px;
         height:50px;
+        margin:20px;
         background:red;
         color:white;
         font-weight:bold;
-        transition:width 2s;
-        -moz-transition:width 2s; /* Firefox 4 */
-        -webkit-transition:width 2s; /* Safari and Chrome */
-        -o-transition:width 2s; /* Opera */
+        transition:height 100ms 1s;
     }
         div:hover{
-            width:300px;
+            height:300px;
         }
         #div1 {transition-timing-function: linear;}
         #div2 {transition-timing-function: ease;}
