--- a/code/node/public/list.html
+++ b/code/node/public/list.html
@@ -9,6 +9,9 @@
     <div>
         
     </div>
+    <ul>
+        <li><a href="edit.html">新增博客</a></li>
+    </ul>
     <script type="text/javascript" charset="utf-8">
         var xhr = new XMLHttpRequest();
         var divElm = document.querySelector('div')
