--- a/code/node/public/list.html
+++ b/code/node/public/list.html
@@ -32,7 +32,7 @@
                 });
 
                 listObj.htmls.push('</ul>');
-                divElm.innerHTML = listObj.htmls.join();
+                divElm.innerHTML = listObj.htmls.join('');
             }
         }
     </script>
