--- a/code/node/public/post.html
+++ b/code/node/public/post.html
@@ -53,6 +53,7 @@
             }
         }
 
+    //获取删除链接
     var btnDelete = document.querySelector('.btn-delete');
     btnDelete.addEventListener('click', function(e){
         //阻止a元素的默认事件
